[metadata]
name = WTForms-dateutil
version = 0.1
url = http://github.com/wtforms/wtforms-dateutil/
project_urls =
    Code = https://github.com/wtforms/wtforms-dateutil
    Issue Tracker = https://github.com/wtforms/wtforms-dateutil/issues
license = BSD
license_files = LICENSE.md
maintainer = WTForms Team
maintainer_email = wtforms@simplecodes.com
description = WTForms fields using dateutil
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = wtforms_dateutil
include_package_data = true
python_requires = >= 3.6
install_requires =
  WTForms>=1.0.5
  python-dateutil
tests_require = coverage
test_suite = tests
